fixed issue where spacing between elements would be off depending on res

--- a/index/index.css
+++ b/index/index.css
@@ -13,14 +13,15 @@ h1{
     color: white;
     float: left;
     margin: 0;
-    margin-left: 30%;
+    margin-left: 34%;
     margin-top: 20%;
+    padding-right: 1%;
 }
 
 img{
-    width: 5.5%;
+    width: 5%;
     height: auto;
-    float: right;
+    position: relative;
     margin: 0;
     margin-right: 30%;
     margin-top: 20%;
@@ -31,7 +32,6 @@ p{
     font-size: 25px;
     color: white;
     text-align: center;
-    padding-top: 30%;
 }
 
 .buttonDiv{
